--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 	</h1>
 	<a class="btn devis" href="mailto:contact@print-it.tld">Devis</a>
 </header>
-<h1>TEST</h1>
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<p class="banner-tagLine"></p>
 		<div class="dots">
 		</div>
+    <a href="#" class="arrow arrow_left"><img src="./assets/images/arrow_left.png" alt="fleche-gauche"></a>
+    <a href="#" class="arrow arrow_right"><img src="./assets/images/arrow_right.png" alt="fleche-droite"></a>
 	</div>
 	<section id="about-us" class="container">
 		<div>
